# stardust

./: .gitignore
data/: walk_back.dae
include/: sd_animation.h  sd_collision.h  sd_common.h  sd_input.h  sd_math.h  sd_memory.h  sd_mesh.h  sd_physics.h  sd_platform.h  sd_software_renderer.h  stardust.h
src/: CMakeLists.txt  Makefile  main.cpp  sd_animation.cpp  sd_collision.cpp  sd_cpu_renderer_utils.inl  sd_input.cpp  sd_math.cpp  sd_memory.cpp  sd_mesh.cpp  sd_physics.cpp  sd_software_renderer.cpp  sd_win32.cpp
